--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~8.3.1",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
