--- a/package.json
+++ b/package.json
@@ -21,28 +21,28 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
     "apisauce": "^2.1.1",
-    "expo": "~41.0.1",
-    "expo-app-loading": "^1.0.3",
-    "expo-asset": "~8.3.1",
-    "expo-font": "~9.1.0",
+    "expo": "^42.0.0",
+    "expo-app-loading": "^1.1.2",
+    "expo-asset": "~8.3.3",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.28.0",
@@ -56,6 +56,9 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "private": true
 }
