--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     ]
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.4",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.7",
+    "@reduxjs/toolkit": "^1.6.2",
     "apisauce": "^2.1.1",
     "expo": "^42.0.0",
     "expo-app-loading": "1.1.2",
@@ -37,9 +40,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "^16.2.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
