--- a/package.json
+++ b/package.json
@@ -7,63 +7,59 @@
     "web": "expo start --web",
     "lint": "eslint --fix .",
     "format": "prettier --write './**/*.{js,jsx,css,md,json}' --config ./.prettierrc",
-    "eject": "expo eject"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "eject": "expo eject",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "./**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
+    "app/**/*.{js,jsx,ts,tsx,md,html,css}": [
+      "prettier --write",
+      "eslint --cache --fix"
     ]
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "0.2.4",
+    "@react-native-masked-view/masked-view": "0.2.5",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.2",
     "apisauce": "^2.1.1",
-    "expo": "^42.0.0",
-    "expo-app-loading": "1.1.2",
-    "expo-asset": "~8.3.3",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-asset": "~8.4.3",
+    "expo-constants": "~12.1.3",
+    "expo-font": "~10.0.3",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-status-bar": "~1.1.0",
     "formik": "^2.2.9",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-redash": "^16.2.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.28.0",
+    "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.16.0",
+    "babel-plugin-styled-components": "^1.13.3",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1"
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.4.1"
   },
   "resolutions": {
     "styled-components": "^5"
