--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~2.2.0",
     "react-native-redash": "^16.2.2",
     "react-native-safe-area-context": "3.3.2",
