--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Eatme",
-    "slug": "Eatme",
+    "name": "FoodDeliveryFood",
+    "slug": "FoodDeliveryFood",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./app/assets/icon.png",
